--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,7 @@ button {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
